Add tests for log providers